# nhl-game-predictor

./: README.md  docker-compose.yml
nhl-game-predictor-backend/: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  keep_server_active.py  keep_servers_active.py  manage.py  predict_games.py  predict_games_script.py  pyproject.toml  server_pinger.py  update_completed_games.py  wait-for-postgres.sh
nhl-game-predictor-backend/games/: admin.py  data_loader.py  models.py  permissions.py  serializers.py  utils.py  views.py
nhl-game-predictor-backend/games/migrations/: 0002_game.py  0004_alter_team_id.py  0007_game_away_team_win_game_home_team_win.py  0008_remove_game_away_team_win_remove_game_home_team_win_and_more.py  0009_alter_teamdata_games_played_and_more.py  0011_alter_teamdata_streak_code_and_more.py  0012_game_season_teamdata_season.py  0014_game_game_json_teamdata_team_data_json.py  0017_gameprediction.py  0018_gameprediction_model_alter_gameprediction_game_and_more.py  0019_alter_game_away_team_data_alter_game_home_team_data.py  0020_season.py  0021_game_season.py  0022_alter_teamdata_id.py  0023_rename_regularseasonend_season_regular_season_end_and_more.py  0024_alter_game_unique_together.py  0024_load_preseason_playoff_games.py  0025_load_preseason_playoff_games.py  0026_assign_season_to_preseason_playoff_games.py  0027_alter_team_abbreviation.py  0028_add_utah_mammoth.py
nhl-game-predictor-backend/nhl_game_predictor/: settings.py  urls.py
nhl-game-predictor-backend/predictor/: admin.py  models.py  serializers.py  views.py
(+59 files in other folders)
